Fix the input mode bubble's margins being too large.

This bubble was still passing margins to BubbleFrameView after that was
handled by DialogClientView instead, which led to the margins being
applied twice.

Bug: 763137
Change-Id: Ifbdb5baa56cc6405b9434742602cdac6a9003f01
Reviewed-on: https://chromium-review.googlesource.com/671927
Reviewed-by: Jun Mukai <mukai@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502735}
Former-commit-id: b01f8608cca6ff3f3fe354e330b7b64c8f1c20b8